2007/03/07
	4. The macros in the declaration of the vectors in the files in the
	interface have been replaced by the typedef: vector3d, matrix3d,
	vector4d, matrix4d, vectorN and matrixNxP.
	3. The files in the interface have an include of 
	"MatrixAbstractLayer/MatrixAbstractLayer.h"
	2. In CjrlHumanoidDynamicRobot, access functions to gaze
	direction and origin take const vector3d& as argument instead of
	vector3d& in order to enforce the const propery of those access
	functions. 
	
	1. Removed template in classes declarations.