@@ -12,9 +12,8 @@
 #ifndef JRL_DYNAMIC_ROBOT
 #define JRL_DYNAMIC_ROBOT
 
-#include "jrlJoint.h"
-
 #include "MatrixAbstractLayer/MatrixAbstractLayer.h"
+#include "jrlJoint.h"
 
 /**
    \brief Abstract class that instantiate a robot with dynamic properties.
