@@ -1,3 +1,6 @@
+2007/03/09
+	5. Moved inclusion of "MatrixAbstractLayer.h" before other inclusions 
+	to make sure matrices and vectors are defined.
 2007/03/07
 	4. The macros in the declaration of the vectors in the files in the
 	interface have been replaced by the typedef: vector3d, matrix3d,
